# Cobb

./: .gitignore  .gitmodules  CLAUDE.md  Cobb.opam  Makefile  README.md  dune-project  meta-config.json
.github/workflows/: workflow.yml
data/: benchmark_results.tex  builtin_coverage_typing.ml  builtin_randomness_coverage_typing.ml  builtin_rty.ml  data_type_decls.ml  excess_comparison_combined.csv  excess_comparison_lists.csv  excess_comparison_trees.csv  normal_typing.ml  normal_typing.mli
data/benchmark/rbtree/: builtin_rty.ml  meta-config.json  prog.ml
data/benchmark/sizedlist/: builtin_rty.ml  meta-config.json  prog.ml  prog1.ml  prog2.ml  prog3.ml
data/benchmark/sizedtree/: builtin_rty.ml  meta-config.json  prog.ml
data/benchmark/sortedlist/: meta-config.json  prog.ml
data/builtin_datatype_coverage_typing/: len.ml
doc/: Makefile  checkin.tex  cobb.bib  final.tex  living_doc.tex  proposal.tex
lib/: dune
scripts/: abduce.py  benchmark_data.py  chart_results.py  check_config.py  excess_results.py  frequify.py  results.py  runner.py  subtype_check.py  synth.py  synth_imprecise.py
test/: dune
